adding Tomas comments to main text

--- a/manuscript/manual_abbrev.bib
+++ b/manuscript/manual_abbrev.bib
@@ -1,3 +1,11 @@
+@article{Jensen1906,
+author={Jensen, J. L. W. V. },
+journal={Acta Math},
+volume={30},
+pages={175-193},
+year={1906},
+title={Sur les fonctions convexes et les in{\'{e}}galit{\'{e}}s entre les valeurs moyennes},
+}
 @article{Cohen2009,
 author = {Cohen, J. E. and Schittler, D. N. and Raffaelli, D. G. and Reuman, D. C.},
 doi = {10.1073/pnas.0910582106},
