--- a/manuscript/supplemental.tex
+++ b/manuscript/supplemental.tex
@@ -25,7 +25,7 @@
 
 \usepackage{authblk}
 
-\title{A quantitative framework for investigating the reliability of network construction: supplemental information}
+\title{A quantitative framework for investigating the reliability of empirical network construction: supplemental information}
 
 
 \author{Alyssa R. Cirtwill$^{1\dagger}$, \&  Anna Ekl\"{o}f$^{1}$, Tomas Roslin$^{2}$, Kate Wootton$^{2}$, Dominique Gravel$^{3}$}
@@ -51,7 +51,7 @@ alyssa.cirtwill@gmail.com\\
 \clearpage
 
 
-\section*{Appendix S1: Detailed description of mathematical framework}
+\section*{Appendix S1: Mathematical framework}
 
   \subsection*{A naive quantification of uncertainty}
 
