75 words too long now

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -97,7 +97,7 @@ alyssa.cirtwill@gmail.com\\
 % \item Text box 1 word count: 381
 % \item Text box 2 word count: 210
 % \item Abstract word count: 199
-% \item Main text word count: 6482 % Including 18 page numbers. % No abstract, acknowledgements, references, table or figure legends. Limit is 6000-7000 including figs, tables, references. approx. 10K all in :/
+% \item Main text word count: 7078 % Including 31 page numbers. Limit is 6000-7000 including figs, tables, references. 
 % \end{itemize}
 % \end{minipage}
 % }
@@ -374,7 +374,7 @@ All data used in this study have been independently published and are accessible
 
 
   \begin{figure}[h!]
-    \caption{Using prior distributions based on the galler-natural enemy network sampled at a single site in~\citet{Kopelke2017}, we calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting ($k = 0$). 
+    \caption{Using prior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017}, we calculate posterior distributions for the probability of interaction ($\lambda$) between two species that have not yet been observed interacting ($k = 0$). 
     Posterior distributions for $\lambda$ narrow and approach zero as the number of observed co-occurrences ($n$) increases. Likewise, the maximum likelihood estimator for the mean probability of interaction (diamonds at top of each panel) approaches zero and the 95\% credible interval (lines at top of each panel) narrows as sample size increases.
     Dashed lines indicate threshold probabilities of 0.01, 0.05, and 0.1. The number of samples required to obtain a 95\% credible interval below each threshold increases rapidly. It takes just over 20 observed co-occurrences to be 95\% confident that $\lambda<0.10$, approximately 50 co-occurrences to be 95\% confident that $\lambda<0.05$, and over 100 co-occurrences to be 95\% confident that $\lambda<0.01$.}
     \label{Salix_pdfs_cdfs}
@@ -394,7 +394,7 @@ All data used in this study have been independently published and are accessible
 
 
   \begin{figure}[h!]
-    \caption{Mean connectance, links per galler, nestedness (NODF), and links per natural enemy for networks assembled using posterior distributions based on a single sub-network in the~\citet{Kopelke2017} dataset (Zillis) occupied a narrow range. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean (+/- SD) network property (e.g., connectance) obtained from a set of 100 detection-filter networks. For each property and both network types, the detection-filter networks cover a broader range of network properties than the posterior-sampling networks. The value of each property decreases with the proportion of links included in the detection-filter networks; values in the original web are indicated by dashed lines.}
+    \caption{Mean connectance, links per galler, nestedness (NODF), and links per natural enemy for networks assembled using posterior distributions based on a single site (Zillis in Graub\"{u}nden, Switzerland) from~\citet{Kopelke2017} occupied a narrow range. We created 100 ``posterior-sampling" networks and then, for each of these, created 100 ``detection-filter" networks by randomly sampling 50\%-99\% of the interactions included in the posterior-sampling network. This simulates imperfect detection of interactions in the field. Each point represents the mean (+/- SD) network property (e.g., connectance) obtained from a set of 100 detection-filter networks. The detection-filter networks cover a broader range of network properties than the posterior-sampling networks but the value of each property decreases as the strength of the detection filter increases. Values in the original web are indicated by dashed lines.}
     \label{posterior_webs}    
     \begin{center}
     \includegraphics[width=.8\textwidth]{figures/GP_posterior_properties_Zillis.eps}
